# lily

./: .env.example  .gitignore  Cargo.toml
src/: .env.example  discord.rs  kobold.rs  main.rs  storage.rs  whisper.rs
