[package]
name = "shelbs"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-core = "0.3.30"
futures-util = "0.3.30"
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
reqwest-eventsource = "0.6.0"
serde = { version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
serenity = { version = "0.12.2", features = ["voice", "cache", "typesize", "client", "standard_framework", "model"]}
songbird = { version = "0.4.3", features = ["receive"]}
poise ={ version = "0.6.1", features = ["cache"]}

tokio = { version = "1.40.0", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.23.1"}
dashmap = "6.0.1"
hound = "3.5.1"
